--- a/package.json
+++ b/package.json
@@ -12,19 +12,23 @@
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.7",
     "aos": "^2.3.4",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^17.0.2",
     "react-awesome-button": "^6.5.1",
     "react-dom": "^17.0.2",
     "react-loader-spinner": "^5.1.2",
-    "react-router-dom": "^6.2.1",
-    "swiper": "^8.3.2",
-    "typed.js": "^2.0.12"
+    "react-router-dom": "^6.8.1",
+    "sort-by": "^1.2.0",
+    "swiper": "^8.3.2"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.5",
+    "sass": "^1.58.0",
     "tailwindcss": "^3.0.13",
+    "typed.js": "^2.0.12",
     "vite": "^2.7.2"
   }
 }
