--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.2",
     "react-awesome-button": "^6.5.1",
     "react-dom": "^17.0.2",
+    "react-icons": "^5.2.1",
     "react-loader-spinner": "^5.1.2",
     "react-router-dom": "^6.8.1",
     "sort-by": "^0.0.2",
